gcc/testsuite/g++.dg/cpp0x/initlist28.C
// PR c++/42060
// { dg-options "-std=c++0x" }

void foo()
{
  int a[1];
  throw a = {}; // { dg-error "assign" }
}
